# jchess_engine

./: .gitmodules  CMakeLists.txt  run.py
scripts/: configure_vcpkg.bat  configure_vcpkg.sh
src/: CMakeLists.txt  main.cpp
src/uci/: uci.hpp  uci_command.cpp  uci_execute.cpp  uci_fen.cpp  uci_loop.cpp
test/: CMakeLists.txt  main.cpp
